--- a/index.html
+++ b/index.html
@@ -71,9 +71,13 @@
         <img src="./assets/machine-learning.png" alt="html" />
         <h3 class="child_skills">Machine Learning</h3>
       </div>
+      <div class="gitSection">
+        <img src="./assets/git.png" alt="git" />
+        <h3 class="child_skills">Git</h3>
+      </div>
       <div class="githubSection">
         <img src="./assets/github.png" alt="github" />
-        <h3 class="child_skills">Git & GitHub</h3>
+        <h3 class="child_skills">GitHub</h3>
       </div>
       <div class="googlefirebaseSection">
         <img src="./assets/firebase_logo_icon_171157.png" alt="gbs" id="fb1">
@@ -280,5 +284,4 @@
   </div>
   </div>
 </body>
-
 </html>
