--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Samrat Portofolio</title>
   <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="responsive.css">
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
     href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,500;0,700;1,300;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet" />
+  <link rel="icon" href="./assets/message-code.png" type="image/x-icon">
 </head>
+
 <body>
   <div class="nav">
     <h2 id="dev">Develop<span>er</span></h2>
@@ -170,7 +173,7 @@
     </div>
     <div class="topOfTheProject">
       <h2 id="pt">My Latest Projects</h2>
-    </div>  
+    </div>
     <div class="projects" id="projects">
       <div class="project1">
         <h4>
@@ -178,83 +181,103 @@
         </h4>
         <img id="mushroom" src="./assets/mushroom.jpg" alt="mushroom">
         <div class="descp">
-         <p>Built with HTML, CSS, JavaScript, Flask, TensorFlow,<br> and Inception V3.</p>
-         <p>Deployed on IBM Watson Studio.</p>
+          <p>Built with HTML, CSS, JavaScript, Flask, TensorFlow,<br> and Inception V3.</p>
+          <p>Deployed on IBM Watson Studio.</p>
         </div>
         <div class="btn_Projects">
-        <button class="cssbuttons-io">
-          <span>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-            <path fill="none" d="M0 0h24v24H0z"></path>
-            <path fill="currentColor" d="M24 12l-5.657 5.657-1.414-1.414L21.172 12l-4.243-4.243 1.414-1.414L24 12zM2.828 12l4.243 4.243-1.414 1.414L0 12l5.657-5.657L7.07 7.757 2.828 12zm6.96 9H7.66l6.552-18h2.128L9.788 21z"></path>
-          </svg>
-          <a href="https://github.com/naanmudhalvan-SI/PBL-NT-GP-14794-1682843285.git">Source Code</a>
-           </span>
-        </button>
-        <button class="button-31">
-          <a href="https://github.com/naanmudhalvan-SI/PBL-NT-GP-14794-1682843285.git">
-            view
-          </a>
-        </button>
+          <button class="cssbuttons-io">
+            <span>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <path fill="none" d="M0 0h24v24H0z"></path>
+                <path fill="currentColor"
+                  d="M24 12l-5.657 5.657-1.414-1.414L21.172 12l-4.243-4.243 1.414-1.414L24 12zM2.828 12l4.243 4.243-1.414 1.414L0 12l5.657-5.657L7.07 7.757 2.828 12zm6.96 9H7.66l6.552-18h2.128L9.788 21z">
+                </path>
+              </svg>
+              <a href="https://github.com/naanmudhalvan-SI/PBL-NT-GP-14794-1682843285.git">Source Code</a>
+            </span>
+          </button>
+          <button class="button-31">
+            <a href="https://github.com/naanmudhalvan-SI/PBL-NT-GP-14794-1682843285.git">
+              view
+            </a>
+          </button>
+        </div>
       </div>
+      <div class="project2">
+        <h4>Student Hub</h4>
+        <img src="./assets/3156814.jpg" id="stuhub" alt="students">
+        <div class="descp">
+          <p>Student Hub: Centralized platform for student data <br>management and collaboration.</p>
+          <p> Built with ReactJS, Firebase, and EmailJS.</p>
+        </div>
+        <div class="btn_Projects">
+          <button class="cssbuttons-io">
+            <span>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <path fill="none" d="M0 0h24v24H0z"></path>
+                <path fill="currentColor"
+                  d="M24 12l-5.657 5.657-1.414-1.414L21.172 12l-4.243-4.243 1.414-1.414L24 12zM2.828 12l4.243 4.243-1.414 1.414L0 12l5.657-5.657L7.07 7.757 2.828 12zm6.96 9H7.66l6.552-18h2.128L9.788 21z">
+                </path>
+              </svg>
+              <a href="https://github.com/samrat2k03/V2---Student-Hub.git">Source Code</a>
+            </span>
+          </button>
+          <button class="button-31">
+            <a href="https://student-hub-1.web.app/">
+              view
+            </a>
+          </button>
+        </div>
       </div>
-    <div class="project2">
-      <h4>Student Hub</h4>
-      <img src="./assets/3156814.jpg" id="stuhub" alt="students">
-      <div class="descp">
-      <p>Student Hub: Centralized platform for student data  <br>management and collaboration.</p>
-      <p> Built with ReactJS, Firebase, and EmailJS.</p>
+      <div class="project3">
+        <h4>Advanced Todo List</h4>
+        <img src="./assets/todo.jpg" id="todolist" alt="todolist">
+        <div class="descp">
+          <p>Advanced TodoList Web application</p>
+          <p>Built with HTML, CSS, JavaScript, FireBase Hosting</p>
+        </div>
+        <div class="btn_Projects">
+          <button class="cssbuttons-io">
+            <span>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <path fill="none" d="M0 0h24v24H0z"></path>
+                <path fill="currentColor"
+                  d="M24 12l-5.657 5.657-1.414-1.414L21.172 12l-4.243-4.243 1.414-1.414L24 12zM2.828 12l4.243 4.243-1.414 1.414L0 12l5.657-5.657L7.07 7.757 2.828 12zm6.96 9H7.66l6.552-18h2.128L9.788 21z">
+                </path>
+              </svg>
+              <a href="https://github.com/samrat2k03/Todo-List-App.git">Source Code</a>
+            </span>
+          </button>
+          <button class="button-31">
+            <a href="https://todo-app-samrat.web.app/">
+              view
+            </a>
+          </button>
+        </div>
+      </div>
     </div>
-    <div class="btn_Projects">
-    <button class="cssbuttons-io">
-      <span>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-        <path fill="none" d="M0 0h24v24H0z"></path>
-        <path fill="currentColor" d="M24 12l-5.657 5.657-1.414-1.414L21.172 12l-4.243-4.243 1.414-1.414L24 12zM2.828 12l4.243 4.243-1.414 1.414L0 12l5.657-5.657L7.07 7.757 2.828 12zm6.96 9H7.66l6.552-18h2.128L9.788 21z"></path>
-      </svg>
-      <a href="https://github.com/samrat2k03/V2---Student-Hub.git">Source Code</a>
-       </span>
-    </button>
-        <button class="button-31">
-        <a href="https://student-hub-1.web.app/">
-          view
-        </a>
-      </button>
-    </div>
-  </div>
-    <div class="project3">
-      <h4>Advanced Todo List</h4>
-      <img src="./assets/todo.jpg" id="todolist" alt="todolist">
-      <div class="descp">
-      <p>Advanced TodoList Web application</p>
-      <p>Built with HTML, CSS, JavaScript, FireBase Hosting</p>
-    </div>
-    <div class="btn_Projects">
-      <button class="cssbuttons-io">
-        <span>
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-          <path fill="none" d="M0 0h24v24H0z"></path>
-          <path fill="currentColor" d="M24 12l-5.657 5.657-1.414-1.414L21.172 12l-4.243-4.243 1.414-1.414L24 12zM2.828 12l4.243 4.243-1.414 1.414L0 12l5.657-5.657L7.07 7.757 2.828 12zm6.96 9H7.66l6.552-18h2.128L9.788 21z"></path>
-        </svg>
-        <a href="https://github.com/samrat2k03/Todo-List-App.git">Source Code</a>
-         </span>
-      </button>
-        <button class="button-31">
-        <a href="https://todo-app-samrat.web.app/">
-          view
-        </a>
-      </button>
-    </div>
+    <div class="future">
+      <p>
+        <q>
+          I will be undertaking and releasing numerous projects in the coming days.
+        </q>
+      </p>
     </div>
   </div>
-  <div class="future">
-    <p>
-      <q>
-        I will be undertaking and releasing numerous projects in the coming days.
-      </q>
-    </p>
+  <div class="education">
+    <h3 id="edu_tit">My Education</h3>
+    <div class="course_details">
+      <h2>
+        B.Tech Information Technology
+      </h2>
+      <h4>2020 - 2024</h4>
+    </div>
+    <div class="college">
+      <h3>
+        @ Sri Ramanujar Engineering College, Chennai - 127
+      </h3>
+    </div>
   </div>
-</div>
   <div class="whitebox">
     <div class="connections" id="contact">
       <h3><strong>Let's Connect</strong></h3><br>
@@ -283,4 +306,5 @@
   </div>
   </div>
 </body>
+
 </html>
